--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,7 +1,7 @@
 @use "sass:math";
 
-$meter-width: 40rem;
-$meter-height: 40rem;
+$meter-width: 35rem;
+$meter-height: 30rem;
 $meter-padding: 10rem;
 $meter-outer-radius: 30rem;
 
@@ -59,7 +59,7 @@ body {
 
 .ul-icon {
     i {
-        color: var(--ul-color-1);
+        // color: var(--ul-color-1);
         transform: rotate(180deg);
     }
 
@@ -71,29 +71,12 @@ body {
 
 .dl-icon {
     i {
-        color: var(--dl-color-2);
+        // color: var(--dl-color-2);
     }
 
     .amount,
     .unit {
         color: white;
-    }
-}
-
-.tmp {
-    opacity: 0;
-    position: absolute;
-
-    .text {
-        align-items: center;
-        display: flex;
-        font-size: 1.5em;
-        justify-content: center;
-        text-transform: none;
-    }
-    i {
-        color: var(--color-secondary);
-        font-size: 15em;
     }
 }
 
@@ -195,7 +178,6 @@ body {
         box-sizing: border-box;
         align-self: start;
         grid-area: info;
-        border: 2px solid white;
 
         margin-top: calc((-100%) + 50% + 50% * (0.58));
 
@@ -222,7 +204,10 @@ body {
     .square-box {
         box-sizing: border-box;
         grid-area: test;
-        border: 2px solid white;
+
+        canvas {
+            padding: 1em;
+        }
 
         z-index: 1;
     }
@@ -278,6 +263,9 @@ body {
     padding: 0;
     margin: auto;
     text-align: center;
+    position: relative;
+    align-items: center;
+    justify-content: center;
 
     --font-size-lg: 4rem;
     --font-size-sm: calc(var(--font-size-lg) / 4);
@@ -285,6 +273,7 @@ body {
     max-height: calc(var(--font-size-lg) + var(--font-size-sm) * 1.5);
 
     .amount {
+        text-align: center;
         grid-area: amount;
         font-size: var(--font-size-lg);
     }
@@ -292,6 +281,7 @@ body {
     .unit {
         font-size: var(--font-size-sm);
         grid-area: unit;
+        text-align: center;
     }
 }
 
@@ -313,35 +303,47 @@ body {
 }
 
 .box-shadow {
-    box-shadow: 0px 0px 40px 10px rgba(0, 0, 0, 0.2);
+    border-radius: var(--border-radius-primary);
+    box-shadow: 1rem 1rem 40px 10px rgba(0, 0, 0, 0.2);
+}
+
+.complete-modal {
+    opacity: 0;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+    padding: 1rem;
+    width: 100%;
+    max-width: var(--meter-width);
+
+    .text {
+        text-align: center;
+        font-size: 1.5rem;
+        h1 {
+            color: var(--ul-color-1);
+        }
+    }
+    i {
+        color: var(--color-secondary);
+        font-size: 15rem;
+    }
 }
 
 @media all and (max-width: $screen-size-md) {
-    // :root {
-    //     --meter-width: #{$meter-width / $screen-md-scale};
-    //     --meter-height: #{$meter-height / $screen-md-scale};
-    // }
-
     html,
     body {
-        font-size: 0.9rem;
+        font-size: 0.8rem;
     }
 }
 
 @media all and (max-width: $screen-size-sm) {
-    // :root {
-    //     --meter-width: #{$meter-width / $screen-sm-scale};
-    //     --meter-height: #{$meter-height / $screen-sm-scale};
-    // }
-
     html,
     body {
-        font-size: 0.9rem;
+        font-size: 0.7rem;
     }
-
-    // .unit-container {
-    //     --font-size-lg: 3.5em;
-    // }
 }
 
 @media all and (max-width: $screen-size-xs) {
@@ -352,44 +354,55 @@ body {
 }
 
 @media all and (orientation: landscape) and (max-height: $screen-size-lg) {
-    // .main-content {
-    //     grid-template-areas:
-    //         "test info"
-    //         "test button";
+    .main-content {
+        grid-template-areas:
+            "test info"
+            "test button";
 
-    //     grid-template-columns: 1fr 1fr;
-    //     grid-template-rows: 1fr 1fr;
-    //     justify-content: center;
-    //     align-items: center;
-    //     column-gap: 1em;
-    //     row-gap: 2em;
-    //     width: 100%;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        justify-content: center;
+        align-items: center;
+        column-gap: 1rem;
+        row-gap: 2rem;
+        width: 100%;
+        max-height: 100%;
 
-    //     max-width: 100%;
+        max-width: 100%;
 
-    //     .start-btn-container {
-    //         align-self: end;
-    //     }
+        .start-btn-container {
+            align-self: start;
+        }
 
-    //     .test-container {
-    //         align-self: center;
-    //     }
+        .test-container {
+            align-self: center;
+        }
 
-    //     .test-info-container {
-    //         align-self: end;
-    //     }
-    // }
+        .test-info-container {
+            align-self: end;
+        }
+    }
+
+    .test-container {
+        .info {
+            grid-template-areas: "amount kind";
+            grid-template-rows: 1fr;
+            grid-template-columns: 1fr 1fr;
+            align-items: center;
+        }
+    }
 }
 
 @media all and (orientation: landscape) and (max-height: $screen-size-sm) {
-    // :root {
-    //     --meter-width: #{$meter-width /
-    //         ($screen-xs-scale * $screen-landscape-scale)};
-    //     --meter-height: #{$meter-height /
-    //         ($screen-xs-scale * $screen-landscape-scale)};
-    // }
-    // html,
-    // body {
-    //     font-size: 0.7em;
-    // }
+    html,
+    body {
+        font-size: 0.7rem;
+    }
+}
+
+@media all and (orientation: landscape) and (max-height: $screen-size-xs) {
+    html,
+    body {
+        font-size: 0.5rem;
+    }
 }
