--- a/styles/style.scss
+++ b/styles/style.scss
@@ -139,7 +139,7 @@ body {
     color: rgb(0, 0, 0);
     cursor: pointer;
     display: flex;
-    font-size: 1.5em;
+    font-size: 2em;
     font-weight: normal;
     height: 2.5em;
     justify-content: center;
@@ -178,6 +178,7 @@ body {
         box-sizing: border-box;
         align-self: start;
         grid-area: info;
+        // padding: 1em;
 
         margin-top: calc((-100%) + 50% + 50% * (0.58));
 
@@ -335,14 +336,14 @@ body {
 @media all and (max-width: $screen-size-md) {
     html,
     body {
-        font-size: 0.8rem;
+        font-size: 0.9rem;
     }
 }
 
 @media all and (max-width: $screen-size-sm) {
     html,
     body {
-        font-size: 0.7rem;
+        font-size: 0.8rem;
     }
 }
 
@@ -384,6 +385,7 @@ body {
     }
 
     .test-container {
+        padding: 1em;
         .info {
             grid-template-areas: "amount kind";
             grid-template-rows: 1fr;
