--- a/styles/style.css
+++ b/styles/style.css
@@ -31,6 +31,10 @@ body {
   overflow: hidden;
   padding: 0;
   width: 100%;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 
 .ul-icon i {
@@ -266,7 +270,7 @@ body {
           justify-content: center;
   --font-size-lg: 4rem;
   --font-size-sm: calc(var(--font-size-lg) / 4);
-  max-height: calc(var(--font-size-lg) + var(--font-size-sm) * 1.5);
+  height: calc(var(--font-size-lg) + var(--font-size-sm) * 1.5);
 }
 
 .unit-container .amount {
@@ -310,8 +314,7 @@ body {
           box-shadow: 1rem 1rem 40px 10px rgba(0, 0, 0, 0.2);
 }
 
-.complete-modal {
-  opacity: 0;
+.pane {
   position: absolute;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -328,21 +331,30 @@ body {
           flex-direction: column;
   padding: 1rem;
   width: 100%;
+  height: 100%;
   max-width: var(--meter-width);
 }
 
-.complete-modal .text {
+.pane .text {
   text-align: center;
   font-size: 1.5rem;
 }
 
-.complete-modal .text h1 {
+.pane .text h1 {
   color: var(--ul-color-1);
 }
 
-.complete-modal i {
-  color: var(--color-secondary);
-  font-size: 15rem;
+.pane i {
+  font-style: normal;
+  font-size: 12rem;
+}
+
+.pane-start {
+  opacity: 1;
+}
+
+.pane-end {
+  opacity: 0;
 }
 
 @media all and (max-width: 768px) {
