--- a/styles/style.css
+++ b/styles/style.css
@@ -66,12 +66,12 @@ body {
   display: -ms-grid;
   display: grid;
   font-family: var(--font-family-primary);
-      grid-template-areas: "button" "test" "info";
+      grid-template-areas: "test" "info" "button";
   max-width: var(--meter-width);
   -ms-grid-columns: 1fr;
       grid-template-columns: 1fr;
-  -ms-grid-rows: 0.5fr 1fr 1fr;
-      grid-template-rows: 0.5fr 1fr 1fr;
+  -ms-grid-rows: 1fr 1fr 0.5fr;
+      grid-template-rows: 1fr 1fr 0.5fr;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -88,7 +88,7 @@ body {
 }
 
 .main-content .start-btn-container {
-  -ms-grid-row: 1;
+  -ms-grid-row: 3;
   -ms-grid-column: 1;
   grid-area: button;
 }
